--- a/html.creativegigstf.com/charles/index-2.html
+++ b/html.creativegigstf.com/charles/index-2.html
@@ -87,51 +87,23 @@
 				<div class="theme-menu-wrapper">
 					<div class="container">
 						<div class="bg-wrapper clearfix">
-							<div class="logo float-left"><a href="index.html"><img src="images/logo/logo.png" alt=""></a></div>
+							<div class="logo float-left"><a href="index.html"><img src="../charles/logo/zinfog new (1).svg" alt=""></a></div>
 							<!-- ============== Menu Warpper ================ -->
 					   		<div class="menu-wrapper float-left">
 					   			<nav id="mega-menu-holder" class="clearfix">
 								   <ul class="clearfix">
-									    <li class="active"><a href="#">Home</a>
+									    <!-- <li class="active"><a href="#">Home</a>
 									    	<ul class="dropdown">
 									        	<li><a href="index.html">Home version one</a></li>
 									        	<li><a href="index-2.html">Home version two</a></li>
 									      </ul>
-									    </li>
-									    <li><a href="#">PAGES</a>
-									    	<ul class="dropdown">
-									    		<li><a href="about.html">About us</a></li>
-									    		<li><a href="team.html">Our team</a></li>
-									    		<li><a href="faq.html">Faq's</a></li>
-									    		<li><a href="404.html">404</a></li>
-									    		<li><a href="shop.html">Shop</a></li>
-									    		<li><a href="shop-details.html">Shop details</a></li>
-									            <li><a href="#">Third Level menu</a>
-									    			<ul>
-									    				<li><a href="#">Demo one</a></li>
-									    				<li><a href="#">Demo two</a></li>
-									    			</ul>
-									    		</li>
-									       </ul>
-									    </li>
+									    </li> -->
+										<li><a href="about.html">About us</a></li>
 									    <li><a href="#">Service</a>
 									    	<ul class="dropdown">
 									        	<li><a href="service.html">Service Version one</a></li>
 									        	<li><a href="service-v2.html">Service version two</a></li>
 									        	<li><a href="service-details.html">Service Details</a></li>
-									       </ul>
-									    </li>
-									    <li><a href="#">Portfolio</a>
-									    	<ul class="dropdown">
-									        	<li><a href="project.html">project</a></li>
-									        	<li><a href="project-details.html">Project details</a></li>
-									       </ul>
-									    </li>
-									    <li><a href="#">Blog</a>
-									    	<ul class="dropdown">
-									        	<li><a href="blog.html">Blog List</a></li>
-									        	<li><a href="blog-grid.html">Blog Grid</a></li>
-									        	<li><a href="blog-details.html">Blog details</a></li>
 									       </ul>
 									    </li>
 									    <li><a href="contact.html">contact</a></li>
@@ -140,18 +112,7 @@
 					   		</div> <!-- /.menu-wrapper -->
 					   		<div class="right-widget float-right">
 					   			<ul>
-					   				<li class="cart-icon">
-					   					<a href="#"><i class="flaticon-tool"></i> <span>2</span></a>
-					   				</li>
-					   				<li class="search-option">
-					   					<div class="dropdown">
-					   						<button type="button" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-search" aria-hidden="true"></i></button>
-											<form action="#" class="dropdown-menu">
-												<input type="text" Placeholder="Enter Your Search">
-												<button><i class="fa fa-search"></i></button>
-											</form>
-					   					</div>
-					   				</li>
+					   				<li><a class="text-white" href=""><i class="flaticon-phone-call"></i><span class="ml-3">+91 9778965493</span></a></li>
 					   			</ul>
 					   		</div> <!-- /.right-widget -->
 						</div> <!-- /.bg-wrapper -->
@@ -663,66 +624,59 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-lg-4 col-sm-6 col-12 logo-widget">
-								<div class="logo"><a href="index.html"><img src="images/logo/logo2.png" alt=""></a></div>
-								<p>Tthis tropic port aboard this tiny ship today still wanted by theam government they survive on up east side to a deluxe as soldiers.</p>
+								<div class="logo"><a href="index.html"><img src="../charles/logo/zinfog new (1).svg" alt=""></a></div>
+								<p>Zinfog Codelabs is a web development company offering customized solutions, including Odoo ERP customization and consulting, mobile and web app development, eCommerce app development, and other business solutions to enhance firm performance.</p>
 								<ul class="social-icon">
 									<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 									<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 									<li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-									<li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-									<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
 								</ul>
 							</div> <!-- /.logo-widget -->
-							<div class="col-lg-2 col-sm-6 col-12 footer-list">
+							<div class="col-lg-4 col-sm-6 col-12 footer-list">
 								<h6 class="title">EXPLORE</h6>
 								<ul>
 									<li><a href="about.html">About us</a></li>
-									<li><a href="service.html">Our Solutions</a></li>
-									<li><a href="project.html">Case Studies</a></li>
-									<li><a href="blog.html">Blog</a></li>
+									<li><a href="">8-Hour Odoo Training</a></li>
+									<li><a href="">24-Hour Odoo Training</a></li>
+									<li><a href="">100-Hour Odoo Training</a></li>
 									<li><a href="contact.html">Contact us</a></li>
 								</ul>
 							</div> <!-- /.footer-list -->
-							<div class="col-lg-3 col-sm-6 col-12 footer-gallery">
+
+							<!-- <div class="col-lg-2 col-sm-6 col-12 footer-gallery">
 								<h6 class="title">Gallery</h6>
 								<div class="wrapper">
 									<div class="row">
-										<div class="col-4">
+										<div class="col-6">
 											<a href="images/portfolio/7.jpg" data-fancybox="gallery" data-caption="Caption for single image" class="fancybox"><img src="images/portfolio/7.jpg" alt=""></a>
 										</div>
-										<div class="col-4">
+										<div class="col-6">
 											<a href="images/portfolio/8.jpg" data-fancybox="gallery" data-caption="Caption for single image" class="fancybox"><img src="images/portfolio/8.jpg" alt=""></a>
 										</div>
-										<div class="col-4">
+										<div class="col-6">
 											<a href="images/portfolio/9.jpg" data-fancybox="gallery" data-caption="Caption for single image" class="fancybox"><img src="images/portfolio/9.jpg" alt=""></a>
 										</div>
-										<div class="col-4">
+										<div class="col-6">
 											<a href="images/portfolio/10.jpg" data-fancybox="gallery" data-caption="Caption for single image" class="fancybox"><img src="images/portfolio/10.jpg" alt=""></a>
-										</div>
-										<div class="col-4">
-											<a href="images/portfolio/11.jpg" data-fancybox="gallery" data-caption="Caption for single image" class="fancybox"><img src="images/portfolio/11.jpg" alt=""></a>
-										</div>
-										<div class="col-4">
-											<a href="images/portfolio/12.jpg" data-fancybox="gallery" data-caption="Caption for single image" class="fancybox"><img src="images/portfolio/12.jpg" alt=""></a>
 										</div>
 									</div>
 								</div>
-							</div> <!-- /.footer-gallery -->
+							</div> -->
 							
 							<div class="col-lg-3 col-sm-6 col-12 contact-widget">
 								<h6 class="title">CONTACT</h6>
 								<ul>
 									<li>
 										<i class="flaticon-direction-signs"></i>
-										23A, Queenstown St, Log Vegas, United States.
+										1st Floor, Sahya Govt CyberPark, GA College P.O, Calicut, Kerala - 673014
 									</li>
 									<li>
 										<i class="flaticon-multimedia-1"></i>
-										<a href="#">mailhere@support.com</a>
+										<a href="mailto:hello@zinfog.com">hello@zinfog.com</a>
 									</li>
 									<li>
 										<i class="fa fa-phone" aria-hidden="true"></i>
-										<a href="#">(+2) 345  9808  000</a>
+										<a href="tel:+91 9778965493">+91 9778965493</a>
 									</li>
 								</ul>
 							</div> <!-- /.contact-widget -->
@@ -731,7 +685,10 @@
 				</div> <!-- /.top-footer -->
 				<div class="bottom-footer">
 					<div class="container">
-						<p>&copy; Copyrights 2018. All Rights Reserved.</p>
+						<div class="d-flex justify-content-center">
+							<p><a class="text-white" href="">Terms & Conditions</a></p>
+							<p><a class="text-white ml-3" href="">Privacy Policy</a></p>
+						</div>
 					</div>
 				</div> <!-- /.bottom-footer -->
 			</footer> <!-- /.theme-footer-two -->
